security(saml): add encryption strats, configs, data hidding
