# sdk/spec/openapi.json
@@ -4176,10 +4176,6 @@
                     "description": "App",
                     "type": "string"
                 },
-                "jwt_signing_key": {
-                    "description": "Auth",
-                    "type": "string"
-                },
                 "sso_provider": {
                     "description": "SSO",
                     "type": "string"
